Fix alignment

--- a/src/components/custom-emojis-modal.css
+++ b/src/components/custom-emojis-modal.css
@@ -62,6 +62,7 @@
 
   .custom-emojis-list {
     flex: 1;
+    align-content: flex-start;
 
     .section-container {
       position: relative;
